# ttf-character-region-exporter

./: .gitignore  Cargo.toml  LICENSE  README.md  output.xml
src/: main.rs  xml.rs
