[package]
name = "ttf-character-regions-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
ttf-parser = "0.14.0"
serde = { version = "1.0.133", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }